added Badr's stuff

--- a/AnonU/app/src/main/AndroidManifest.xml
+++ b/AnonU/app/src/main/AndroidManifest.xml
@@ -16,7 +16,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".SchoolsActivity" />
-        <activity android:name=".HistoryActivity"></activity>
+        <activity android:name=".HistoryActivity" />
+        <activity android:name=".LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
