--- a/AnonU/app/build.gradle
+++ b/AnonU/app/build.gradle
@@ -25,5 +25,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
     testCompile 'junit:junit:4.12'
 }
