--- a/AnonU/app/build.gradle
+++ b/AnonU/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.android.support.constraint:constraint-layout:+'
     testCompile 'junit:junit:4.12'
 }
