--- a/AnonU/app/src/main/AndroidManifest.xml
+++ b/AnonU/app/src/main/AndroidManifest.xml
@@ -12,12 +12,13 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".SchoolsActivity" />
         <activity android:name=".HistoryActivity" />
+        <activity android:name=".DynamicActivity" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DynamicActivity"></activity>
+
     </application>
 
 </manifest>
